--- a/assets/scss/main.bundle.scss
+++ b/assets/scss/main.bundle.scss
@@ -1,3 +1,5 @@
 @use 'bootstrap/bootstrap';
 @use 'main';
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
