--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,6 +23,8 @@
           <!-- panel -->
           <aside aria-label="Panel" id="panel-wrapper" class="col-xl-3 ps-2 text-muted">
             <div class="access">
+              {{ partialCached "update-list.html" . }}
+              {{ partialCached "trending-tags.html" . }}
             </div>
           </aside>
         </div>
