--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,12 +26,14 @@
               {{ partialCached "update-list.html" . }}
               {{ partialCached "trending-tags.html" . }}
             </div>
+            {{ block "panel" . }}{{ end }}
           </aside>
         </div>
 
         <div class="row">
           <!-- tail -->
           <div id="tail-wrapper" class="col-12 col-lg-11 col-xl-9 px-md-4">
+            {{ block "tail" . }}{{ end }}
             {{ partialCached "footer.html" . }}
           </div>
         </div>
