--- a/layouts/partials/datetime.html
+++ b/layouts/partials/datetime.html
@@ -1,6 +1,6 @@
 {{ $locales := index site.Data.locales .lang }}
-{{ $dateFormat := default "02/01/2006" $locales.df.post.strftime }}
-{{ $dayjsFormat := default "DD/MM/YYYY" $locales.df.post.dayjs }}
+{{ $dateFormat := default "02/01/2006" (i18n "df.post.strftime") }}
+{{ $dayjsFormat := default "DD/MM/YYYY" (i18n "df.post.dayjs") }}
 
 <time
   {{ if .class }}class="{{ .class }}"{{ end }}
