--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,6 +38,7 @@
             {{ partialCached "footer.html" . }}
           </div>
         </div>
+        {{ partial "search-results.html" . }}
       </div>
 
       <aside aria-label="Scroll to Top">
