add refractor content

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -114,7 +114,7 @@
     {{ end }}
 
     <div class="content">
-      {{ .Content }}
+      {{ partial "refractor-content.html" . }}
     </div>
 
     <div class="post-tail-wrapper text-muted">
