--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,7 @@
   </p>
 
   <p>
-    {{- $platform := `<a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a>` -}}
+    {{- $platform := `<a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>` -}}
 
     {{- $theme := printf `<a
         data-bs-toggle="tooltip"
