--- a/layouts/partials/js-selector.html
+++ b/layouts/partials/js-selector.html
@@ -85,11 +85,10 @@
 
 {{ if .Params.math }}
   <!-- MathJax -->
-  {{ $mathjaxConfig := resources.Get "js/data/mathjax.js" | minify | fingerprint }}
-  <script async src="{{ $mathjaxConfig.RelPermalink }}"></script>
+  {{ $mathjaxConfig := resources.Get "js/mathjax.js" | minify | fingerprint }}
+  <script src="{{ $mathjaxConfig.RelPermalink }}"></script>
   <script async src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
-  {{ $mathjax := (index site.Data.origin site.Params.cdn).mathjax.js }}
-  <script id="MathJax-script" async src="{{ $mathjax }}"></script>
+  <script id="MathJax-script" async src="{{ $data.mathjax.js }}"></script>
 {{ end }}
 
 <!-- Pageviews -->
