add opengraph twitter_cards and schema

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,7 +18,9 @@
     content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
   >
 
-
+  {{ template "_internal/opengraph.html" . }}
+  {{ template "_internal/twitter_cards.html" . }}
+  {{ template "_internal/schema.html" . }}
 
   <title>
     {{ if ne .Kind "home" }}
