add language selector

--- a/layouts/partials/language-selector.html
+++ b/layouts/partials/language-selector.html
@@ -1,9 +1,9 @@
-<div class="language-selector">
-  <select class="language-dropdown" onchange="location = this.value;">
+<div class="lang-dropdown">
+  <select class="lang-select" onchange="location = this.value;">
     {{ $currentLang := .Site.Language.Lang }}
     {{ range .Site.Languages }}
       <option value="/{{ .Lang }}/" {{ if eq .Lang $currentLang }}selected{{ end }}>
-        {{ .LanguageName }} ({{ .Lang }})
+        {{ .LanguageName }}
       </option>
     {{ end }}
   </select>
