--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -34,8 +34,8 @@
           </li>
           <!-- .nav-item -->
         {{ end }}
-        <li class="nav-item">
-          <a class="nav-link">
+        <li class="nav-item mt-4">
+          <a class="nav-link no-hover">
             <i class="fa-fw fas fa-language"></i>
             {{ partial "language-selector.html" . }}
           </a>
